--- a/index.html
+++ b/index.html
@@ -71,27 +71,22 @@
             </h2>
             <div class="about-container">
                 <div class="img-container">
-                    <img src="./Assets/images/My pics.JPG" id="img" height="350px">
+                    <img src="./Assets/images/My pics.JPG" id="img">
                 </div>
                 <div class="text-container">
                     <h3>Front End Developer</h3>
                     <p>
-                        Hello, I'm Oluwabukola, a math lover turned coding maestro. Ever since I 
-                        found joy in crunching numbers, I discovered a passion for solving problems. 
-                        That passion led me straight into the captivating world of front-end development.
+                        Hello, I'm Oluwabukola. A math enthusiast turned
+                        coding enthusiast, finds joy in front-end development,
+                        treating HTML, CSS, and JavaScript as a superhero trio.
+                        Each line of code is a move on the design puzzle, turning 
+                        screens into interactive masterpieces. With React, Tailwind CSS,
+                         and Next.js, I'm not just keeping up; I'm defining the future. 
+                         Let's continue crafting solutions and creations, one line at a time 🚀💻
                     </p>
-
-                    <p> For me, Front-end development is like unlocking the secrets of a design puzzle. 
-                        Think of HTML, CSS, and JavaScript as my superhero trio. Every line of code is a
-                         move, and the screen is my canvas. It's not just about making things work; it's 
-                         about crafting an interactive masterpiece that users will love.</p>
-
-                    <p> But guess what? I'm not stopping at the basics.
-                         I'm riding the wave of the latest industry trends, working seamlessly with 
-                         React, Tailwind CSS, and Next.js—the superheroes of the coding realm. It's 
-                         not just about keeping up; it's about setting the pace, embracing the tools 
-                         that define the future. Let's keep creating and solving, one line at a time! 🚀💡
-                    </p>
+                    <button class="btn" type="submit" name="btn-send" required><a href="Oluwabukola Fasan CV.pdf" download>Download CV
+                        <i class="fa fa-download" aria-hidden="true"></i>
+                    </a></button>
                 </div>
             </div>
             <!--Skills-->
@@ -135,19 +130,10 @@
                     <div class="skill-bar">
                         <div class="info">
                             <p>React</p>
-                            <p class="percent">70%</p>
+                            <p class="percent">80%</p>
                         </div>
                         <div class="bar">
                             <span class="react"></span>
-                        </div>
-                    </div>
-                    <div class="skill-bar">
-                        <div class="info">
-                            <p>Tailwind CSS</p>
-                            <p class="percent">60%</p>
-                        </div>
-                        <div class="bar">
-                            <span class="tailwind"></span>
                         </div>
                     </div>
                     <div class="skill-bar">
@@ -161,11 +147,20 @@
                     </div>
                     <div class="skill-bar">
                         <div class="info">
+                            <p>Tailwind CSS</p>
+                            <p class="percent">70%</p>
+                        </div>
+                        <div class="bar">
+                            <span class="tailwind"></span>
+                        </div>
+                    </div>
+                    <div class="skill-bar">
+                        <div class="info">
                             <p>TypeScript</p>
                             <p class="percent">70%</p>
                         </div>
                         <div class="bar">
-                            <span class="raect"></span>
+                            <span class="typescript"></span>
                         </div>
                     </div>
                     <div class="skill-bar">
@@ -218,31 +213,43 @@
                         <hr>
                     </div>
                 </div>
-                <div class="wrapper">
-                    <div class="slide">
-                        <p>We faced some complex challenges with our project,
-                            and Bukola's problem-solving skills were invaluable.
-                        </p>
-                        <img src="./Assets/images/Clients-img/clients-1.avif" alt="black-woman" class="client-1">
-                    </div>
-                    <div class="slide">
-                        <p>Bukola is a responsive design wizard!
-                            She ensured that our website looks and works seamlessly on all devices,
-                            from smartphones to large desktop screens. </p>
-                        <img src="./Assets/images/Clients-img/client-2.avif" alt="black-woman" class="client-2">
-                    </div>
-                    <div class="slide">
-                        <p>Working with Bukola has been an absolute pleasure.
-                            Her keen eye for design and ability to turn our vision into a stunning website left us
-                            in
-                            awe.
-                        </p>
-                        <img src="./Assets/images/Clients-img/client-3.jpg" alt="black-woman" class="client-3">
-
-                    </div>
+                    <div class="wrapper">
+                        <div class="slide">
+                            <p><i class="fa fa-quote-left" aria-hidden="true"></i>
+                                We came across some difficult challenges in our project, 
+                                and Bukola's problem-solving abilities were incredibly
+                                 helpful in finding solutions.
+                                <i class="fa fa-quote-right" aria-hidden="true"></i>
+                            </p>
+                            <img src="./Assets/images/Clients-img/clients-1.avif" alt="black-woman" class="client-1">
+                            <h4 class="name">Parker Banks</h4>
+                            <p class="roles">Senior Web developer</p>
+                        </div>
+                        <div class="slide">
+                            <p><i class="fa fa-quote-left" aria-hidden="true"></i>
+                                Bukola is a responsive design wizard!
+                                She ensured that our website looks and works seamlessly on all devices,
+                                from smartphones to large desktop screens. <i class="fa fa-quote-right" aria-hidden="true"></i>
+                             </p>
+                            <img src="./Assets/images/Clients-img/client-2.avif" alt="black-woman" class="client-2">
+                            <h4 class="name">Parker Banks</h4>
+                            <p class="roles">Senior Web developer</p>
+                        </div>
+                        <div class="slide">
+                            <p><i class="fa fa-quote-left" aria-hidden="true"></i>
+                                Working with Bukola has been an absolute pleasure.
+                                Her keen eye for design and ability to turn our vision into a stunning website left us
+                                in
+                                awe. <i class="fa fa-quote-right" aria-hidden="true"></i>
+                            </p>
+                            <img src="./Assets/images/Clients-img/client-3.jpg" alt="black-woman" class="client-3">
+                            <h4 class="name">Parker Banks</h4>
+                            <p class="roles">Senior Web developer</p>
+                        </div>
+                </div>
             </div>
-            </div>
-        </div>
+             </div>
+                
     </section>
     <!--Resume Section-->
     <section class="resume" id="section">
@@ -587,7 +594,7 @@
                             <input type="text" name="subject" placeholder="Subject" required>
                             <textarea name="message" id="" cols="30" rows="10" placeholder="Message" required></textarea>
                             <div class="btn-con">
-                                <button class="btn" type="submit" name="btn-send" required>Send Message</button>
+                                <button class="btn" type="submit" name="btn-send">Send Message</button>
                                 <span>Sending your message...</span>
                             </div>
                         </form>
