--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
 </head>
 
 <body>
-
+    <main class="main-conatiner">
     <section class="home">
         <div class="home-container active" id="home">
-
             <h1><a href="index.html">Oluwabukola</a></h1>
             <div class="text">
                 <p>I'm a passionate <span class="role">Front-end Developer</span> from Nigeria
@@ -54,7 +53,6 @@
             </div>
         </div>
     </section>
-    <section class="main-conatiner">
     <!--About Section-->
     <section class="about" id="section">
         <div class="about-main" id="about">
@@ -589,7 +587,7 @@
                         <form name="contact" data-netlify="true" action="success.html" method="post">
                             <div class="first-row-1">
                                 <input type="text" name="name" placeholder="Your Name" required>
-                                <input type="text" name="email" placeholder="Your Email" required>
+                                <input type="email" name="email" placeholder="Your Email" required>
                             </div>
                             <input type="text" name="subject" placeholder="Subject" required>
                             <textarea name="message" id="" cols="30" rows="10" placeholder="Message" required></textarea>
@@ -602,8 +600,9 @@
                 </div>
             </div>
         </div>
+    </div>
     </section>
-</section>
+</main>
 <script src="./app.js">
 </script>
 </body>
