--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 </head>
 
 <body>
-    <main class="main-conatiner">
     <section class="home">
         <div class="home-container active" id="home">
             <h1><a href="index.html">Oluwabukola</a></h1>
@@ -54,6 +53,7 @@
         </div>
     </section>
     <!--About Section-->
+    <main class="main-container">
     <section class="about" id="section">
         <div class="about-main" id="about">
             <div class="heading">
@@ -220,8 +220,8 @@
                                 <i class="fa fa-quote-right" aria-hidden="true"></i>
                             </p>
                             <img src="./Assets/images/Clients-img/clients-1.avif" alt="black-woman" class="client-1">
-                            <h4 class="name">Parker Banks</h4>
-                            <p class="roles">Senior Web developer</p>
+                            <h4 class="name">Alademehin Tolulope</h4>
+                            <p class="roles">Product Designer</p>
                         </div>
                         <div class="slide">
                             <p><i class="fa fa-quote-left" aria-hidden="true"></i>
@@ -230,8 +230,8 @@
                                 from smartphones to large desktop screens. <i class="fa fa-quote-right" aria-hidden="true"></i>
                              </p>
                             <img src="./Assets/images/Clients-img/client-2.avif" alt="black-woman" class="client-2">
-                            <h4 class="name">Parker Banks</h4>
-                            <p class="roles">Senior Web developer</p>
+                            <h4 class="name">Tumise Olayinka</h4>
+                            <p class="roles">Frontend developer</p>
                         </div>
                         <div class="slide">
                             <p><i class="fa fa-quote-left" aria-hidden="true"></i>
