--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                  helpful in finding solutions.
                                 <i class="fa fa-quote-right" aria-hidden="true"></i>
                             </p>
-                            <img src="./Assets/images/Clients-img/clients-1.avif" alt="black-woman" class="client-1">
+                            <img src="./Assets/images/Clients-img/clients-1.jpeg" alt="black-woman" class="client-1">
                             <h4 class="name">Alademehin Tolulope</h4>
                             <p class="roles">Product Designer</p>
                         </div>
@@ -229,7 +229,7 @@
                                 She ensured that our website looks and works seamlessly on all devices,
                                 from smartphones to large desktop screens. <i class="fa fa-quote-right" aria-hidden="true"></i>
                              </p>
-                            <img src="./Assets/images/Clients-img/client-2.avif" alt="black-woman" class="client-2">
+                            <img src="./Assets/images/Clients-img/client-2.jpeg" alt="black-woman" class="client-2">
                             <h4 class="name">Tumise Olayinka</h4>
                             <p class="roles">Frontend developer</p>
                         </div>
