--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
                 </div>
                     <div class="wrapper">
                         <div class="slide">
+                           <div>
                             <p><i class="fa fa-quote-left" aria-hidden="true"></i>
                                 We came across some difficult challenges in our project, 
                                 and Bukola's problem-solving abilities were incredibly
@@ -220,20 +221,28 @@
                                 <i class="fa fa-quote-right" aria-hidden="true"></i>
                             </p>
                             <img src="./Assets/images/Clients-img/clients-1.jpeg" alt="black-woman" class="client-1">
-                            <h4 class="name">Alademehin Tolulope</h4>
-                            <p class="roles">Product Designer</p>
+                           </div>
+                            <div class="title">
+                                <h4 class="name">Alademehin Tolulope</h4>
+                                <p class="roles">Product Designer</p>
+                            </div>
                         </div>
                         <div class="slide">
+                            <div>
                             <p><i class="fa fa-quote-left" aria-hidden="true"></i>
                                 Bukola is a responsive design wizard!
-                                She ensured that our website looks and works seamlessly on all devices,
-                                from smartphones to large desktop screens. <i class="fa fa-quote-right" aria-hidden="true"></i>
+                                She ensured that our website looks and works seamlessly on all devices. <i class="fa fa-quote-right" aria-hidden="true"></i>
                              </p>
                             <img src="./Assets/images/Clients-img/client-2.jpeg" alt="black-woman" class="client-2">
-                            <h4 class="name">Tumise Olayinka</h4>
-                            <p class="roles">Frontend developer</p>
+                            </div>
+                            <div class="title">
+                                <h4 class="name">Tumise Olayinka</h4>
+                                <p class="roles">Frontend developer</p>
+                            </div>
+                            
                         </div>
                         <div class="slide">
+                          <div>
                             <p><i class="fa fa-quote-left" aria-hidden="true"></i>
                                 Working with Bukola has been an absolute pleasure.
                                 Her keen eye for design and ability to turn our vision into a stunning website left us
@@ -241,8 +250,11 @@
                                 awe. <i class="fa fa-quote-right" aria-hidden="true"></i>
                             </p>
                             <img src="./Assets/images/Clients-img/client-3.jpg" alt="black-woman" class="client-3">
+                          </div>
+                            <div class="title">
                             <h4 class="name">Parker Banks</h4>
                             <p class="roles">Senior Web developer</p>
+                            </div>
                         </div>
                 </div>
             </div>
