--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                 <div class="project-1">
                     <img src="./Assets/images/project-covers/cover-1 (2).png" alt="">
                     <i class="fa fa-compress first"></i>
-                    <a href="#" data-target="project-details-3" class="view-details"><i class="fa fa-link" title="view project details"></i></a>
+                    <a href="" data-target="project-details-3" class="view-details"><i class="fa fa-link" title="view project details"></i></a>
                     <i class="fa fa-compress second"></i>
                 </div>
             </div>
@@ -514,7 +514,7 @@
                         <p><span>Category: </span> Web Design</p>
                         <p><span>Client: </span> Peronal Project</p>
                         <p><span>Project date: </span>17 October, 2023</p>
-                        <p><span>Project URL: </span><a href="https://oluwabukolafasan.netlify.app/">My portfolio</a></p>
+                        <p><span>Project URL: </span><a href="https://oluwabukolafasan.netlify.app/" target="_blank">My portfolio</a></p>
                         <p><span>Github Link: </span><a href="https://github.com/Bookieblue/myportfolio" target="_blank">Source Code</a></p>
                         <br>
                         <br>
@@ -527,9 +527,47 @@
                     </div>
                 </div>
             </div>
-        </section>
-        </div>
-      </div>
+    </section>
+    </div>
+    </div>
+    <!-- modal for project three -->
+    <div id="project-details-2" class="modal">
+                <div class="modal-content">
+                  <!-- Content for the modal-->
+                  <span class="close">&times;</span>
+                  <section class="project-details">
+                    <div class="project-container">
+                        <h2>Portfolio Details</h2>
+                        <div class="content">
+                            <div class="carousel">
+                                <figure class="slide">
+                                    <img src="./Assets/images/project-covers/3rd project.png" alt=""/>
+                                    <img src="./Assets/images/project-covers/3rd project-1.png" alt=""/>
+                                    <img src="./Assets/images/project-covers/3rd project-2.png" alt="" />
+                                    <img src="./Assets/images/project-covers/3rd project.png" alt="" />
+                                    <img src="./Assets/images/project-covers/3rd project-2.png" alt=""/>
+                                </figure>
+                            </div>
+                            <div class="project-info">
+                                <h4> Project Information</h4>
+                                <p><span>Category: </span> Web Design</p>
+                                <p><span>Client: </span> Peronal Project</p>
+                                <p><span>Project date: </span>20th December, 2023</p>
+                                <p><span>Project URL: </span><a href="https://bookieblue.github.io/Quiz-App/" target="_blank">Quiz App (80% completed)</a></p>
+                                <p><span>Github Link: </span><a href="https://github.com/Bookieblue/Quiz-App" target="_blank">Source Code</a></p>
+                                <br>
+                                <br>
+                                <p>This is a quiz application built using HTML, CSS, and JavaScript.
+                                     This interactive quiz app offers users a chance to assess their knowledge.
+                                      With randomized category selection, users can dive into various topics and 
+                                      engage in challenging quizzes to test their expertise.
+                               </p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                </div>
+                </div>
     </section>
     <!--contact section-->
     <section class="contact" id="section">
