--- a/index.html
+++ b/index.html
@@ -557,10 +557,9 @@
                                 <p><span>Github Link: </span><a href="https://github.com/Bookieblue/Quiz-App" target="_blank">Source Code</a></p>
                                 <br>
                                 <br>
-                                <p>This is a quiz application built using HTML, CSS, and JavaScript.
-                                     This interactive quiz app offers users a chance to assess their knowledge.
-                                      With randomized category selection, users can dive into various topics and 
-                                      engage in challenging quizzes to test their expertise.
+                                <p>This is a quiz application built using HTML, CSS, and JavaScript. This interactive quiz app offers users a chance to assess their knowledge with randomized category selection.
+                                    Seamlessly integrated with a REST API for dynamic question retrieval, users can dive into various topics and 
+                                    engage in challenging quizzes to test their expertise.
                                </p>
                             </div>
                         </div>
