--- a/index.html
+++ b/index.html
@@ -478,12 +478,10 @@
                          <br>
                          <p>Introducing the Ear1 app landing page – a unique platform connecting individuals
                             with top influencers and celebrities. Users unlock direct access to influencers, 
-                            enabling them to ask questions, discuss their progress, and draw insights from the 
-                            experiences of these influential figures. All this is designed to fuel personal 
-                            improvement and ignite fresh ideas.
+                            enabling them to ask questions and discuss their progress.
                             <br>
-                            Technologies used are Next.js, TypeScript, Tailwind CSS for styling
-                             and AOS  (Animations On Scroll) for an enhanced user experience.
+                            <br>
+                            <b>Tech Stack</b> - Next.js, TypeScript, Tailwind CSS and AOS  (Animations On Scroll).
                         </p>
                      </div>
                     </div>
@@ -518,11 +516,15 @@
                         <p><span>Github Link: </span><a href="https://github.com/Bookieblue/myportfolio" target="_blank">Source Code</a></p>
                         <br>
                         <br>
-                        <p>Introducing my portfolio website, I made a portfolio website using only HTML, CSS, and JavaScript. 
-                            It was a bit challenging, especially when creating tabs for easy navigation
-                             between sections. The website has a cool dark mode that users can switch on 
-                             and off easily. Doing this project helped me get better at web development
-                              with these basic technologies.
+                        <p>Introducing my portfolio website, where you'll find more 
+                            than just my projects—it's a glimpse into who I am. 
+                            Alongside showcasing my proudest works, you'll discover 
+                            details about my background, skills, and interests. 
+                            With easy-to-use navigation tabs and a stylish dark mode feature, 
+                            exploring the site is both simple and visually appealing.
+                              <br>
+                              <br>
+                              <b>Tech Stack</b> - HTML, CSS, and JavaScript.
                        </p>
                     </div>
                 </div>
@@ -557,9 +559,12 @@
                                 <p><span>Github Link: </span><a href="https://github.com/Bookieblue/Quiz-App" target="_blank">Source Code</a></p>
                                 <br>
                                 <br>
-                                <p>This is a quiz application built using HTML, CSS, and JavaScript. This interactive quiz app offers users a chance to assess their knowledge with randomized category selection.
+                                <p>This is an interactive quiz app offers users a chance to assess their knowledge with randomized category selection.
                                     Seamlessly integrated with a REST API for dynamic question retrieval, users can dive into various topics and 
                                     engage in challenging quizzes to test their expertise.
+                                    <br>
+                                   <br>
+                                    <b>Tech Stack</b> - HTML, CSS, REST API and JavaScript.
                                </p>
                             </div>
                         </div>
@@ -618,7 +623,7 @@
                         </div>
                         <div class="email">
                             <h3>Email Me</h3>
-                            <p>oluwabukola.fasan @gmail.com</p>
+                            <p>oluwabukola.fasan@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-text">
