--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
                                 <p><span>Github Link: </span><a href="https://github.com/Bookieblue/Quiz-App" target="_blank">Source Code</a></p>
                                 <br>
                                 <br>
-                                <p>This is an interactive quiz app offers users a chance to assess their knowledge with randomized category selection.
+                                <p>This is an interactive quiz app that offers users a chance to assess their knowledge with randomized category selection.
                                     Seamlessly integrated with a REST API for dynamic question retrieval, users can dive into various topics and 
                                     engage in challenging quizzes to test their expertise.
                                     <br>
