--- a/index.html
+++ b/index.html
@@ -608,10 +608,10 @@
                         <div class="socials-contact">
                             <h3>Social Profiles</h3>
                             <div class="socials-profile">
-                                <i class="fa fa-twitter"></i>
-                                <i class="fa fa-github"></i>
-                                <i class="fa fa-instagram"></i>
-                                <i class="fa fa-linkedin"></i>
+                                <a href="https://twitter.com/bukky1743782"><i class="fa fa-twitter"></i></a>
+                                <a href="https://github.com/Bookieblue"><i class="fa fa-github"></i></a>
+                                <a href=""><i class="fa fa-instagram"></i></a>
+                                <a href="www.linkedin.com/in/oluwabukola-fasan-b220561a6"><i class="fa fa-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
