--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a href="https://twitter.com/bukky1743782"><i class="fa fa-twitter"></i></a>
                 <a href="https://github.com/Bookieblue"><i class="fa fa-github"></i></a>
                 <a href=""><i class="fa fa-instagram"></i></a>
-                <a href="www.linkedin.com/in/oluwabukola-fasan-b220561a6"><i class="fa fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/oluwabukola-fasan-b220561a6"><i class="fa fa-linkedin"></i></a>
             </div>
         </div>
     </section>
@@ -470,7 +470,7 @@
                      <div class="project-info">
                          <h4> Project Information</h4>
                          <p><span>Category: </span> Web Design</p>
-                         <p><span>Client: </span> Peronal Project</p>
+                         <p><span>Client: </span> Personal Project</p>
                          <p><span>Project date: </span>13th January, 2024</p>
                          <p><span>Project URL: </span><a href="https://ear2.netlify.app/" target="_blank">Ear1 App(Landing Page)</a></p>
                          <p><span>Github Link: </span><a href="https://github.com/Bookieblue/Ear1" target="_blank">Source Code</a></p>
@@ -510,7 +510,7 @@
                     <div class="project-info">
                         <h4> Project Information</h4>
                         <p><span>Category: </span> Web Design</p>
-                        <p><span>Client: </span> Peronal Project</p>
+                        <p><span>Client: </span> Personal Project</p>
                         <p><span>Project date: </span>17 October, 2023</p>
                         <p><span>Project URL: </span><a href="https://oluwabukolafasan.netlify.app/" target="_blank">My portfolio</a></p>
                         <p><span>Github Link: </span><a href="https://github.com/Bookieblue/myportfolio" target="_blank">Source Code</a></p>
@@ -553,7 +553,7 @@
                             <div class="project-info">
                                 <h4> Project Information</h4>
                                 <p><span>Category: </span> Web Design</p>
-                                <p><span>Client: </span> Peronal Project</p>
+                                <p><span>Client: </span> Personal Project</p>
                                 <p><span>Project date: </span>20th December, 2023</p>
                                 <p><span>Project URL: </span><a href="https://bookieblue.github.io/Quiz-App/" target="_blank">Quiz App (80% completed)</a></p>
                                 <p><span>Github Link: </span><a href="https://github.com/Bookieblue/Quiz-App" target="_blank">Source Code</a></p>
@@ -611,7 +611,7 @@
                                 <a href="https://twitter.com/bukky1743782"><i class="fa fa-twitter"></i></a>
                                 <a href="https://github.com/Bookieblue"><i class="fa fa-github"></i></a>
                                 <a href=""><i class="fa fa-instagram"></i></a>
-                                <a href="www.linkedin.com/in/oluwabukola-fasan-b220561a6"><i class="fa fa-linkedin"></i></a>
+                                <a href="https://www.linkedin.com/in/oluwabukola-fasan-b220561a6"><i class="fa fa-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
