--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a href="https://twitter.com/bukky1743782"><i class="fa fa-twitter"></i></a>
                 <a href="https://github.com/Bookieblue"><i class="fa fa-github"></i></a>
                 <a href=""><i class="fa fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/oluwabukola-fasan-b220561a6"><i class="fa fa-linkedin"></i></a>
+                <a href="https://linkedin.com/in/oluwabukola-fasan-b220561a6"><i class="fa fa-linkedin"></i></a>
             </div>
         </div>
     </section>
@@ -555,7 +555,7 @@
                                 <p><span>Category: </span> Web Design</p>
                                 <p><span>Client: </span> Personal Project</p>
                                 <p><span>Project date: </span>20th December, 2023</p>
-                                <p><span>Project URL: </span><a href="https://bookieblue.github.io/Quiz-App/" target="_blank">Quiz App (80% completed)</a></p>
+                                <p><span>Project URL: </span><a href="https://bookieblue.github.io/Quiz-App/" target="_blank">Quiz App</a></p>
                                 <p><span>Github Link: </span><a href="https://github.com/Bookieblue/Quiz-App" target="_blank">Source Code</a></p>
                                 <br>
                                 <br>
@@ -611,7 +611,7 @@
                                 <a href="https://twitter.com/bukky1743782"><i class="fa fa-twitter"></i></a>
                                 <a href="https://github.com/Bookieblue"><i class="fa fa-github"></i></a>
                                 <a href=""><i class="fa fa-instagram"></i></a>
-                                <a href="https://www.linkedin.com/in/oluwabukola-fasan-b220561a6"><i class="fa fa-linkedin"></i></a>
+                                <a href="https://linkedin.com/in/oluwabukola-fasan-b220561a6"><i class="fa fa-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
