--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                                 <p><span>Category: </span> Web Design</p>
                                 <p><span>Client: </span> Personal Project</p>
                                 <p><span>Project date: </span>20th December, 2023</p>
-                                <p><span>Project URL: </span><a href="https://bookieblue.github.io/Quiz-App/" target="_blank">Quiz App</a></p>
+                                <p><span>Project URL: </span><a href="https://a-quizapp.netlify.app/" target="_blank">Quiz App</a></p>
                                 <p><span>Github Link: </span><a href="https://github.com/Bookieblue/Quiz-App" target="_blank">Source Code</a></p>
                                 <br>
                                 <br>
