--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                 </div>
             </div>
             <div class="socials">
-                <a href="https://twitter.com/bukky1743782"><i class="fa fa-twitter"></i></a>
-                <a href="https://github.com/Bookieblue"><i class="fa fa-github"></i></a>
+                <a href="https://twitter.com/bukky1743782" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="https://github.com/Bookieblue" target="_blank"><i class="fa fa-github"></i></a>
                 <a href=""><i class="fa fa-instagram"></i></a>
-                <a href="https://linkedin.com/in/oluwabukola-fasan-b220561a6"><i class="fa fa-linkedin"></i></a>
+                <a href="https://linkedin.com/in/oluwabukola-fasan-b220561a6" target="_blank"><i class="fa fa-linkedin"></i></a>
             </div>
         </div>
     </section>
@@ -184,6 +184,10 @@
                 </div>
                 <div class="interest-cards">
                     <div class="interest-text">
+                        <i class="fa fa-file-code-o"></i>
+                        <p>Coding</p>
+                    </div>
+                    <div class="interest-text">
                         <i class="fa fa-address-card"></i>
                         <p>Reading</p>
                     </div>
@@ -194,10 +198,6 @@
                     <div class="interest-text">
                         <i class="fa fa-bullhorn"></i>
                         <p>Singing</p>
-                    </div>
-                    <div class="interest-text">
-                        <i class="fa fa-file-code-o"></i>
-                        <p>Coding</p>
                     </div>
                 </div>
             </div>
@@ -436,6 +436,12 @@
                     <i class="fa fa-compress second"></i>
                 </div>
                 <div class="project-1">
+                    <img src="./Assets/images/project-covers/4th project-1.png" alt="">
+                    <i class="fa fa-compress first"></i>
+                    <a href="" data-target="project-details-4" class="view-details"><i class="fa fa-link" title="view project details"></i></a>
+                    <i class="fa fa-compress second"></i>
+                </div>
+                <div class="project-1">
                     <img src="./Assets/images/project-covers/3rd project.png" alt="">
                     <i class="fa fa-compress first"></i>
                     <a href="#" data-target="project-details-2" class="view-details"><i class="fa fa-link" title="view project details"></i></a>
@@ -447,6 +453,7 @@
                     <a href="" data-target="project-details-3" class="view-details"><i class="fa fa-link" title="view project details"></i></a>
                     <i class="fa fa-compress second"></i>
                 </div>
+
             </div>
         </div>
         <!-- modal for project one -->
@@ -572,6 +579,48 @@
                 </section>
                 </div>
                 </div>
+    <!-- modal for project four -->
+    <div id="project-details-4" class="modal">
+        <div class="modal-content">
+          <!-- Content for the modal-->
+          <span class="close">&times;</span>
+          <section class="project-details">
+            <div class="project-container">
+                <h2>Portfolio Details</h2>
+                <div class="content">
+                    <div class="carousel">
+                        <figure class="slide">
+                            <img src="./Assets/images/project-covers/4th project-1.png" alt=""/>
+                            <img src="./Assets/images/project-covers/4th project-2.png" alt=""/>
+                            <img src="./Assets/images/project-covers/4th project-3.png" alt="" />
+                            <img src="./Assets/images/project-covers/4th project-2.png" alt="" />
+                            <img src="./Assets/images/project-covers/4th project-3.png" alt=""/>
+                        </figure>
+                    </div>
+                    <div class="project-info">
+                        <h4> Project Information</h4>
+                        <p><span>Category: </span> Web Design</p>
+                        <p><span>Client: </span> Personal Project</p>
+                        <p><span>Project date: </span>10th March, 2024</p>
+                        <p><span>Project URL: </span><a href="https://my-snapgram.netlify.app/sign-in" target="_blank">Snap Gram App</a></p>
+                        <!-- <p><span>Github Link: </span><a href="https://github.com/Bookieblue/Quiz-App" target="_blank">Source Code</a></p> -->
+                        <br>
+                        <br>
+                        <p>This is an Instagram-like platform that allows users
+                           to create posts, follow other users, upload images, like posts,
+                           and engage in a vibrant social community. This full-stack web application 
+                           is powered by Appwrite as the backend, ensuring robust functionality and 
+                           seamless user experiences.
+                            <br>
+                           <br>
+                        <b>Tech Stack</b> - React, TypeScript, React query, Shadcn, Appwrite and Tailwind CSS.
+                       </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        </div>
+        </div>
     </section>
     <!--contact section-->
     <section class="contact" id="section">
@@ -608,10 +657,10 @@
                         <div class="socials-contact">
                             <h3>Social Profiles</h3>
                             <div class="socials-profile">
-                                <a href="https://twitter.com/bukky1743782"><i class="fa fa-twitter"></i></a>
-                                <a href="https://github.com/Bookieblue"><i class="fa fa-github"></i></a>
+                                <a href="https://twitter.com/bukky1743782" target="_blank"><i class="fa fa-twitter"></i></a>
+                                <a href="https://github.com/Bookieblue" target="_blank"><i class="fa fa-github"></i></a>
                                 <a href=""><i class="fa fa-instagram"></i></a>
-                                <a href="https://linkedin.com/in/oluwabukola-fasan-b220561a6"><i class="fa fa-linkedin"></i></a>
+                                <a href="https://linkedin.com/in/oluwabukola-fasan-b220561a6" target="_blank"><i class="fa fa-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
