--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
                         <p><span>Category: </span> Web Design</p>
                         <p><span>Client: </span> Personal Project</p>
                         <p><span>Project date: </span>10th March, 2024</p>
-                        <p><span>Project URL: </span><a href="https://my-snapgram.netlify.app/sign-in" target="_blank">Snap Gram App</a></p>
+                        <p><span>Project URL: </span><a href="https://my-snapgram.netlify.app/" target="_blank">Snap Gram App</a></p>
                         <!-- <p><span>Github Link: </span><a href="https://github.com/Bookieblue/Quiz-App" target="_blank">Source Code</a></p> -->
                         <br>
                         <br>
