--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                                     React.</li>
                                 <li>To build reusable codes and functional systems</li>
                                 <li>Building the client’s side of the web application</li>
-                                <li>Collaborating with Product Designers, Back-end Designers and Project Managers to
+                                <li>Collaborating with Product Designers, Back-end Developers and Project Managers to
                                     improve user experience</li>
                                 <li>Working closely with backend developers to integrate front-end components with
                                     server-side logic</li>
